# test-react-ui

./: .commitlintrc.js  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierrc.js  .stylelintignore  .stylelintrc.js  .taplo.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  jest.preset.js  nx.json  package.json  pnpm-lock.yaml  project.json  pyproject.toml  tsconfig.base.json
.devcontainer/: devcontainer.json
.devcontainer/scripts/: download-fonts.sh  download-go-dependencies.sh
tools/ansible/: ansible.cfg
